fix(side-menu): make it usable for non-overflow scenario

--- a/src/app/common/sidemenu/cc-side-menu.scss
+++ b/src/app/common/sidemenu/cc-side-menu.scss
@@ -80,14 +80,22 @@
 //for the poor folks with Android 2.x or iOS <=4
 .cc-has-no-overflow-support{
 
-    .snap-drawer-left{
-        z-index: 0;
+    .snap-drawer-left, .snap-drawer-right{
+        z-index: -1;
         display: none;
     }
 
     .snapjs-left{
         .snap-drawer-left{
             display: block;
+            z-index: 0;
+        }
+    }
+
+    .snapjs-right{
+        .snap-drawer-right{
+            display: block;
+            z-index: 0;
         }
     }
 
